2013-06-11  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #15605]
	* sysdeps/generic/symbol-hacks.h: Add workaround for memset/memmove calls
	generated by the compiler on loop optimizations.
	* sysdeps/wordsize-32/symbol-hacks.h: Include next symbol-hacks.h for
	general definitions.

2013-06-12  Joseph Myers  <joseph@codesourcery.com>

	* math/bug-nextafter.c: Include <math-tests.h>.
	(main): Only test for exceptions if EXCEPTION_TESTS is true for
	the relevant type.
	* math/bug-nexttoward.c: Include <math-tests.h>.
	(main): Only test for exceptions if EXCEPTION_TESTS is true for
	the relevant type.
	* math/test-misc.c: Include <math-tests.h>.
	(main): Only test for exceptions if EXCEPTION_TESTS is true for
	the relevant type.

2013-06-12  Andreas Jaeger  <aj@suse.de>

	* po/ia.po: Update Interlingua translation from translation
	project.

2013-06-12  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* include/fenv.h: Include stdbool.h.
	(struct rm_ctx): New structure.
	* sysdeps/generic/math_private.h (SET_RESTORE_ROUND_GENERIC):
	Define macro.
	(SET_RESTORE_ROUND): Define using SET_RESTORE_ROUND_GENERIC.
	(SET_RESTORE_ROUNDF): Likewise.
	(SET_RESTORE_ROUNDL): Likewise.
	(SET_RESTORE_ROUND_NOEX): Likewise.
	(SET_RESTORE_ROUND_NOEXF): Likewise.
	(SET_RESTORE_ROUND_NOEXL): Likewise.
	(SET_RESTORE_ROUND_53BIT): Likewise.
	[HAVE_RM_CTX] (libc_feresetround_noex_ctx): Define macro.
	(libc_feresetround_noexf_ctx): Likewise.
	(libc_feresetround_noexl_ctx): Likewise.
	(libc_feholdsetround_53bit_ctx): Likewise.
	(libc_feresetround_53bit_ctx): Likewise.
	* sysdeps/i386/fpu/fenv_private.h (HAVE_RM_CTX): Define macro.
	(libc_feholdexcept_setround_sse_ctx): New function.
	(libc_fesetenv_sse_ctx): Likewise.
	(libc_feupdateenv_sse_ctx): Likewise.
	(libc_feholdexcept_setround_387_prec_ctx): Likewise.
	(libc_feholdexcept_setround_387_ctx): Likewise.
	(libc_feholdexcept_setround_387_53bit_ctx): Likewise.
	(libc_feholdsetround_387_prec_ctx): Likewise.